Fix scrolling bug for projects modal on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4214,6 +4214,7 @@ body.is-mobile #main > header {
 	#badcord-modal-content {
 		width: 375px;
 		margin-left: -188px;
+		overflow-y: scroll;
 	}
 
 	#modal-image {
